* Added support for custom items in the items attr on players.xml by using their name instead of id.
* Added support for modded startitems,playertype and starttrinkets in challenges.xml.
* Added support for custom achievements in the achievement attribute for items.xml(locking items now possible?)
/newline/
Fixes:
* Fix GridEntity render callbacks being massively broken
* Fix PRE_GRID_ENTITY_SPAWN not accepting a table
* Fix potential crash with SpawnGridEntity(GridEntityDesc)
	- main_ex.lua typechecking on this is temporarily disabled
	- Will silently fail if returning an invalid type to prevent crashes
* Fix Entity:AddWeakness duration being incorrect
* Fix Beam:Add(Point) override
* Fix nomarks players.xml attribute
* Fix GetAchievementIdByName not working until Slot selection
/newline/
v1.0.4 - 
Additions:
* The error dialog now automatically gets dismissed the next time ImGui is opened
* Imgui.IsVisible()
* Added function overload for Isaac.GetLocalizedString(), which accepts LanguageCode string as paramater
* Added Scale param for POST_PLAYERHUD_RENDER_ACTIVE_ITEM callback
* Added Entity:GetDamageCountdown() and Entity:SetDamageCountdown()
/newline/
Fixes:
* Fixed Eden's damage, range, and shot speed stats not properly changing
* The console reimplementation is now more faithful to the original, which fixes some cases where the output color was wrong
* Pickup:GetCollectibleCycle() length now limited by CycleCollectibleCount
* Fixed binder for Player:AddBoneOrbital
* Renamed Player method AddLeprocy -> AddLeprosy
* Fixed binder for PlayerHUD:RenderActiveItem
* Fixed a bug where POST_ITEM_OVERLAY_UPDATE callback passed unusable userdata instead of Giantbook ID
* Fixed PRE_ITEM_OVERLAY_SHOW callback not playing custom giantbook animation, when you replace vanilla one
* Fixed PRE_PLANETARIUM_APPLY_X_PENALTY softlocking the game
* Enabled mods/debug console disable access to enter daily run as before
/newline/
v1.0.3 - 
Additions:
* ColorParams