@@ -11,6 +11,7 @@ ModCallbacks.MC_POST_GRID_HURT_DAMAGE = 1013
 ModCallbacks.MC_HUD_UPDATE = 1020
 ModCallbacks.MC_HUD_POST_UPDATE = 1021
 ModCallbacks.MC_HUD_RENDER = 1022
+ModCallbacks.MC_POST_HUD_RENDER = 1024
 ModCallbacks.MC_MAIN_MENU_RENDER = 1023
 ModCallbacks.MC_PRE_SFX_PLAY = 1030
 ModCallbacks.MC_POST_SFX_PLAY = 1031
