@@ -12,6 +12,7 @@ Additions:
 * Added support for custom items in the items attr on players.xml by using their name instead of id.
 * Added support for modded startitems,playertype and starttrinkets in challenges.xml.
 * Added support for custom achievements in the achievement attribute for items.xml(locking items now possible?)
+* Added MC_POST_HUD_RENDER callback (good for rendering on top of the HUD)
 /newline/
 Fixes:
 * Fix GridEntity render callbacks being massively broken
